--- a/scripts/self/magnets_on_plane_2.html
+++ b/scripts/self/magnets_on_plane_2.html
@@ -10,11 +10,19 @@
     <style>
         body {
             margin: 0;
+            padding: 0;
             overflow: hidden;
+            width: 100vw;
+            height: 100vh;
         }
 
         canvas {
             display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
         }
 
         #info {
@@ -24,6 +32,7 @@
             text-align: center;
             color: white;
             font-family: Arial, sans-serif;
+            z-index: 1;
         }
 
         #pane {
@@ -35,6 +44,7 @@
             padding: 10px;
             color: white;
             font-family: Arial, sans-serif;
+            z-index: 1;
         }
 
         #helpText {
@@ -44,6 +54,7 @@
             text-align: center;
             color: white;
             font-family: Arial, sans-serif;
+            z-index: 1;
         }
     </style>
 
